# kmbio

./: .cookiecutter.yaml  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  gitlab-ci.sh  pyproject.toml  setup.cfg  setup.py
.ci/conda/: build.sh  conda_build_config.yaml  meta.yaml  run_test.sh
.conda/: meta.yaml  run_test.sh
Bio/: __init__.py
Bio/PDB/: Chain.py  DSSP.py  Entity.py  MMCIFParser.py  Model.py  NACCESS.py  NeighborSearch.py  PDBIO.py  PDBParser.py  Polypeptide.py  Residue.py  ResidueDepth.py  Selection.py  Structure.py  StructureBuilder.py  Superimposer.py
Doc/: Tutorial.tex
Tests/: test_KDTree.py  test_MMCIF.py  test_PDB.py  test_PDB_KDTree.py  test_QCPSuperimposer.py  test_SVDSuperimposer.py  test_mmtf.py  test_new_stuff.py
devtools/conda-recipe/: meta.yaml
docs/: .gitignore  Makefile  bioassembly.md  conf.py  examples.rst  history.md  index.rst  installation.md  make.bat  modules.rst  usage.md
docs/benchmarks/: cythonize.md  float32.md  no_numpy.md  ordered_dict.md
docs/examples/: explore_mmcif_bioassembly.ipynb
kmbio/: __init__.py  exc.py  test_helpers.py  utils.py
kmbio/KDTree/: KDTree.py  __init__.py
kmbio/PDB/: AbstractPropertyMap.py  Atom.py  Chain.py  (+32 more)
tests/: common.py  conftest.py  test_KDTree.py  test_MMCIF.py  test_PDB.py  test_PDB_KDTree.py  test_QCPSuperimposer.py  test_SVDSuperimposer.py  test_attributes.py  test_bioassembly.py  test_doctest.py  test_mmcif2dict_speed.py  test_mmtf.py  test_new_stuff.py  test_pdb_io.py  test_structure.py  test_utils.py
(+56 files in other folders)
