[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "numpy", "cython"]  # PEP 508 specifications.

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
